ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/free_and_constant.sol
uint constant c = 7;
fn c() returns (uint) {}
// ----
// DeclarationError 2333: (21-51): Identifier already declared.
